Add backend proxy to support hosting the backend on a different server and add login validation and feedback

--- a/app/sass/theme/default/fancify.scss
+++ b/app/sass/theme/default/fancify.scss
@@ -42,3 +42,7 @@ div.layout > header {
 .view-animate.ng-leave.ng-leave-active {
   opacity:0;
 }
+
+input.ng-invalid {
+  @include transition(all linear 0.1s);
+}
