--- a/app/sass/theme/default/variables.scss
+++ b/app/sass/theme/default/variables.scss
@@ -16,6 +16,7 @@ $pink:                            #c3325f;
 $purple:                          #7a43b6;
 
 $base-accent-color:               $blue;
+$error-color:                     $red;
 
 // body colors
 $body-bg-color:                   $dark-gray;
