--- a/app/sass/theme/default/styles.scss
+++ b/app/sass/theme/default/styles.scss
@@ -12,3 +12,17 @@ input[type="submit"],button {
 .fa-spin {
   @include animation(spin 1.4s infinite linear);
 }
+
+input.ng-invalid {
+  border-color: $error-color;
+  background-color: lighten($error-color,50%);
+  box-shadow: inset 0 1px 8px lighten($error-color,30%);
+}
+
+.error-feedback {
+  display: block;
+  padding: 0.5em;
+  background-color: rgba($body-color,0.2);
+  border-radius: $base-border-radius;
+  text-shadow: 0 1px 8px $error-color;
+}
