--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -430,6 +430,18 @@ input[type="submit"].primary, button.primary {
   -moz-animation: spin 1.4s infinite linear;
   animation: spin 1.4s infinite linear; }
 
+input.ng-invalid {
+  border-color: #a52b1f;
+  background-color: #f6d1cd;
+  box-shadow: inset 0 1px 8px #e68177; }
+
+.error-feedback {
+  display: block;
+  padding: 0.5em;
+  background-color: rgba(230, 230, 230, 0.2);
+  border-radius: 0.1875em;
+  text-shadow: 0 1px 8px #a52b1f; }
+
 .progress-bar {
   background-color: #f2f2f2;
   border: 1px solid #dddddd;
@@ -616,6 +628,9 @@ div.layout {
   .intro .view-animate {
     position: absolute;
     width: 100%; }
+  .intro .error-feedback {
+    margin-top: 1em;
+    text-align: center; }
 
 div.layout > header .title:after {
   background-color: #4d4d4d;
@@ -665,3 +680,8 @@ div.layout > header .search {
 
 .view-animate.ng-leave.ng-leave-active {
   opacity: 0; }
+
+input.ng-invalid {
+  -webkit-transition: all linear 0.1s;
+  -moz-transition: all linear 0.1s;
+  transition: all linear 0.1s; }
