Add subtle transition between the login screen and the main application screen

--- a/app/sass/components/intro.scss
+++ b/app/sass/components/intro.scss
@@ -1,7 +1,8 @@
 .intro {
   @include outer-container;
   position: relative;
-  top: 12em;
+  top: 50%;
+  margin-top: -12em;
   max-width: 28em;
 
   h1 {
