--- a/app/sass/theme/default/styles.scss
+++ b/app/sass/theme/default/styles.scss
@@ -15,14 +15,14 @@ input[type="submit"],button {
 
 input.ng-invalid {
   border-color: $error-color;
-  background-color: lighten($error-color,50%);
+  background-color: lighten($error-color,45%);
   box-shadow: inset 0 1px 8px lighten($error-color,30%);
 }
 
 .error-feedback {
   display: block;
   padding: 0.5em;
-  background-color: rgba($body-color,0.2);
+  background-color: rgba($body-color,0.15);
   border-radius: $base-border-radius;
-  text-shadow: 0 1px 8px $error-color;
+  color: $error-color;
 }
