--- a/app/sass/theme/default/variables.scss
+++ b/app/sass/theme/default/variables.scss
@@ -1,8 +1,3 @@
-// library
-@import 'bourbon';
-@import 'base';
-@import 'neat';
-
 // Accent Colors
 $blue:                            #049CDB;
 $dark-blue:                       #0064CD;
@@ -16,11 +11,11 @@ $pink:                            #c3325f;
 $purple:                          #7a43b6;
 
 $base-accent-color:               $blue;
-$error-color:                     $red;
+$error-color:                     lighten($red,15%);
 
 // body colors
-$body-bg-color:                   $dark-gray;
-$body-color:                      darken(white,10%);
+$body-bg-color:                   darken(white,10%);
+$body-color:                      $dark-gray;
 
 // layout colors
 $header-bg-color:                 darken($dark-gray,10%);
@@ -31,16 +26,14 @@ $layout-side-bg-color:            $dark-gray;
 $layout-side-bg-hover-color:      lighten($dark-gray,20%);
 $layout-side-color:               $light-gray;
 
-$main-bg-color:                   white;
-
 $highlight-color:                 lighten($light-gray,20%);
 
 // layout formatting
 $header-height:                   4em;
 $layout-columns:                  24;
 $layout-menu-col:                 5;
-$layout-main-col-w:               18;
-$layout-main-col-r:               12;
+$layout-main-col-w:               19;
+$layout-main-col-r:               13;
 $layout-details-col:              6;
 
 $header-title-size:               $base-font-size * 2;
