--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,7 @@
 button,
 input[type="submit"] {
   -webkit-font-smoothing: antialiased;
-  background-color: #477dca;
+  background-color: #477DCA;
   border-radius: 0.1875em;
   color: white;
   display: inline-block;
@@ -18,7 +18,7 @@ input[type="submit"] {
 body {
   -webkit-font-smoothing: antialiased;
   background-color: white;
-  color: #333333;
+  color: #333;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
   line-height: 1.5; }
@@ -54,7 +54,7 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477dca;
+  color: #477DCA;
   text-decoration: none; }
   a:hover {
     color: #2c5999; }
@@ -63,7 +63,7 @@ a {
     outline: none; }
 
 hr {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDD;
   border-left: none;
   border-right: none;
   border-top: none;
@@ -74,7 +74,7 @@ img {
   max-width: 100%; }
 
 blockquote {
-  border-left: 2px solid #dddddd;
+  border-left: 2px solid #DDD;
   color: #595959;
   margin: 1.5em 0;
   padding-left: 0.75em; }
@@ -87,7 +87,7 @@ cite {
 
 fieldset {
   background: #f7f7f7;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   margin: 0 0 0.75em 0;
   padding: 1.5em; }
 
@@ -117,7 +117,7 @@ select[multiple=multiple] {
   transition: border-color;
   background-color: white;
   border-radius: 0.1875em;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
@@ -131,7 +131,7 @@ select[multiple=multiple] {
   textarea:focus,
   input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
   select[multiple=multiple]:focus {
-    border-color: #477dca;
+    border-color: #477DCA;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
     outline: none; }
 
@@ -172,217 +172,7 @@ th {
   text-align: left; }
 
 td {
-  border-bottom: 1px solid #dddddd;
-  padding: 0.75em 0; }
-
-tr, td, th {
-  vertical-align: middle; }
-
-ul, ol {
-  margin: 0;
-  padding: 0;
-  list-style-type: none; }
-dl {
-  margin-bottom: 0.75em; }
-  dl dt {
-    font-weight: bold;
-    margin-top: 0.75em; }
-  dl dd {
-    margin: 0; }
-
-button,
-input[type="submit"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -o-appearance: none;
-  appearance: none;
-  border: none;
-  cursor: pointer;
-  user-select: none;
-  vertical-align: middle;
-  white-space: nowrap; }
-
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-button,
-input[type="submit"] {
-  -webkit-font-smoothing: antialiased;
-  background-color: #477dca;
-  border-radius: 0.1875em;
-  color: white;
-  display: inline-block;
-  font-size: 1em;
-  font-weight: bold;
-  line-height: 1;
-  padding: .75em 1em;
-  text-decoration: none; }
-  button:hover,
-  input[type="submit"]:hover {
-    background-color: #2c5999;
-    color: white; }
-
-body {
-  -webkit-font-smoothing: antialiased;
-  background-color: white;
-  color: #333333;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 1em;
-  line-height: 1.5; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  line-height: 1.25em;
-  margin: 0;
-  text-rendering: optimizeLegibility; }
-
-h1 {
-  font-size: 2.25em; }
-
-h2 {
-  font-size: 2em; }
-
-h3 {
-  font-size: 1.75em; }
-
-h4 {
-  font-size: 1.5em; }
-
-h5 {
-  font-size: 1.25em; }
-
-h6 {
-  font-size: 1em; }
-
-p {
-  margin: 0 0 0.75em; }
-
-a {
-  -webkit-transition: color 0.1s linear;
-  -moz-transition: color 0.1s linear;
-  transition: color 0.1s linear;
-  color: #477dca;
-  text-decoration: none; }
-  a:hover {
-    color: #2c5999; }
-  a:active, a:focus {
-    color: #2c5999;
-    outline: none; }
-
-hr {
-  border-bottom: 1px solid #dddddd;
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  margin: 1.5em 0; }
-
-img {
-  margin: 0;
-  max-width: 100%; }
-
-blockquote {
-  border-left: 2px solid #dddddd;
-  color: #595959;
-  margin: 1.5em 0;
-  padding-left: 0.75em; }
-
-cite {
-  color: #737373;
-  font-style: italic; }
-  cite:before {
-    content: '\2014 \00A0'; }
-
-fieldset {
-  background: #f7f7f7;
-  border: 1px solid #dddddd;
-  margin: 0 0 0.75em 0;
-  padding: 1.5em; }
-
-input,
-label,
-select {
-  display: block;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 1em; }
-
-label {
-  font-weight: bold;
-  margin-bottom: 0.375em; }
-  label.required:after {
-    content: "*"; }
-  label abbr {
-    display: none; }
-
-textarea,
-input[type="email"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="url"], input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="time"], input[type="week"],
-select[multiple=multiple] {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: border-color;
-  -moz-transition: border-color;
-  transition: border-color;
-  background-color: white;
-  border-radius: 0.1875em;
-  border: 1px solid #dddddd;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 1em;
-  margin-bottom: 0.75em;
-  padding: 0.5em 0.5em;
-  width: 100%; }
-  textarea:hover,
-  input[type="email"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="url"]:hover, input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="month"]:hover, input[type="time"]:hover, input[type="week"]:hover,
-  select[multiple=multiple]:hover {
-    border-color: #c4c4c4; }
-  textarea:focus,
-  input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
-  select[multiple=multiple]:focus {
-    border-color: #477dca;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
-    outline: none; }
-
-textarea {
-  resize: vertical; }
-
-input[type="search"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -o-appearance: none;
-  appearance: none; }
-
-input[type="checkbox"], input[type="radio"] {
-  display: inline;
-  margin-right: 0.375em; }
-
-input[type="file"] {
-  margin-bottom: 0.75em;
-  padding-bottom: 0.5em;
-  width: 100%; }
-
-select {
-  width: auto;
-  max-width: 100%;
-  margin-bottom: 1.5em; }
-
-table {
-  border-collapse: collapse;
-  margin: 0.75em 0;
-  table-layout: fixed;
-  width: 100%; }
-
-th {
-  border-bottom: 1px solid #b7b7b7;
-  font-weight: bold;
-  padding: 0.75em 0;
-  text-align: left; }
-
-td {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDD;
   padding: 0.75em 0; }
 
 tr, td, th {
@@ -419,7 +209,7 @@ input[type="submit"] {
   box-sizing: border-box; }
 
 input[type="submit"].primary, button.primary {
-  background-color: #049cdb;
+  background-color: #049CDB;
   color: white; }
   input[type="submit"].primary:hover, button.primary:hover {
     background-color: #0378a9;
@@ -431,20 +221,20 @@ input[type="submit"].primary, button.primary {
   animation: spin 1.4s infinite linear; }
 
 input.ng-invalid {
-  border-color: #a52b1f;
-  background-color: #f6d1cd;
-  box-shadow: inset 0 1px 8px #e68177; }
+  border-color: #d94637;
+  background-color: #fef9f8;
+  box-shadow: inset 0 1px 8px #f2bdb8; }
 
 .error-feedback {
   display: block;
   padding: 0.5em;
-  background-color: rgba(230, 230, 230, 0.2);
+  background-color: rgba(51, 51, 51, 0.15);
   border-radius: 0.1875em;
-  text-shadow: 0 1px 8px #a52b1f; }
+  color: #d94637; }
 
 .progress-bar {
   background-color: #f2f2f2;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   box-shadow: inset 0 0 3px 0 rgba(115, 115, 115, 0.15);
   border-radius: 0.1875em;
   height: 30px;
@@ -458,7 +248,7 @@ input.ng-invalid {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background-color: #049cdb;
+    background-color: #049CDB;
     background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%);
     background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%);
     background-size: 40px 40px;
@@ -472,31 +262,26 @@ input.ng-invalid {
 @-webkit-keyframes progress {
   0% {
     background-position: 0px 0px; }
-
   100% {
     background-position: 40px 0px; } }
 @-moz-keyframes progress {
   0% {
     background-position: 0px 0px; }
-
   100% {
     background-position: 40px 0px; } }
 @-ms-keyframes progress {
   0% {
     background-position: 0px 0px; }
-
   100% {
     background-position: 40px 0px; } }
 @-o-keyframes progress {
   0% {
     background-position: 0px 0px; }
-
   100% {
     background-position: 40px 0px; } }
 @keyframes progress {
   0% {
     background-position: 0px 0px; }
-
   100% {
     background-position: 40px 0px; } }
 .loader {
@@ -516,53 +301,41 @@ input.ng-invalid {
 
 body {
   margin: 0;
-  background-color: #333333;
-  color: #e6e6e6; }
+  background-color: #e6e6e6;
+  color: #333; }
   body h1, body h2, body h3, body h4 {
     font-weight: normal; }
 
 div.layout {
   position: absolute;
+  height: 100%;
   width: 100%; }
   div.layout > header {
     width: 100%;
     height: 4em;
     background-color: #1a1a1a;
-    position: fixed; }
+    position: fixed;
+    z-index: 10000; }
     div.layout > header .title, div.layout > header .search {
-      color: #dddddd;
+      color: #DDD;
       font-size: 2em;
-      position: relative; }
+      position: relative;
+      float: left; }
     div.layout > header .title {
       background-color: #4d4d4d;
-      float: left;
-      display: block;
-      margin-right: 1.16509%;
-      width: 19.91097%;
+      width: 20.83333%;
       padding: 0.25em 0.5em; }
-      div.layout > header .title:last-child {
-        margin-right: 0; }
     div.layout > header .search {
-      float: left;
-      display: block;
-      margin-right: 1.16509%;
-      width: 49.41745%;
+      width: 54.16667%;
       padding: 0.25em 1em; }
-      div.layout > header .search:last-child {
-        margin-right: 0; }
   div.layout > aside, div.layout > .main {
     top: 4em; }
   div.layout > aside {
-    float: left;
-    display: block;
-    margin-right: 1.16509%;
-    width: 19.91097%;
-    background-color: #333333;
+    width: 20.83333%;
+    background-color: #333;
     position: fixed;
     min-height: 100%;
-    color: #dddddd; }
-    div.layout > aside:last-child {
-      margin-right: 0; }
+    color: #DDD; }
     div.layout > aside .modules {
       display: block; }
       div.layout > aside .modules:after {
@@ -571,37 +344,35 @@ div.layout {
         clear: both; }
       div.layout > aside .modules li {
         float: left; }
-    div.layout > aside .controllers li {
+    div.layout > aside .sections li {
       display: block;
       padding: 0.3em 0.6em;
-      font-size: 1.2em; }
-      div.layout > aside .controllers li:after {
+      font-size: 1.2em;
+      border-left: 0.3em solid #333; }
+      div.layout > aside .sections li:after {
         content: "";
         display: table;
         clear: both; }
-      div.layout > aside .controllers li:hover {
+      div.layout > aside .sections li:hover {
         background-color: #666666;
-        cursor: pointer; }
-      div.layout > aside .controllers li.active {
-        background-color: #049cdb;
-        color: white; }
+        cursor: pointer;
+        border-color: #DDD; }
+      div.layout > aside .sections li.active {
+        background-color: #666666;
+        color: white;
+        border-color: #049CDB; }
   div.layout > .main {
-    float: left;
-    display: block;
-    margin-right: 1.16509%;
-    width: 74.70873%;
-    margin-left: 21.07606%;
-    background-color: white;
+    width: 79.16667%;
+    margin-left: 20.83333%;
     position: relative; }
-    div.layout > .main:last-child {
-      margin-right: 0; }
 
 .intro {
   max-width: 68em;
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  top: 12em;
+  top: 50%;
+  margin-top: -12em;
   max-width: 28em; }
   .intro:after {
     content: "";
@@ -612,7 +383,7 @@ div.layout {
     margin-bottom: 0.25em; }
     .intro h1 i {
       margin-right: 0.25em;
-      color: #049cdb; }
+      color: #049CDB; }
   .intro h2 {
     font-size: 2.5em;
     margin-bottom: 0.83333em; }
@@ -653,7 +424,7 @@ div.layout > header .search {
     height: 100%;
     width: 1.6em;
     position: absolute;
-    left: -1.6em;
+    left: -1em;
     top: 0;
     content: "";
     -webkit-transform: skew(-20deg, 0deg);
@@ -661,27 +432,50 @@ div.layout > header .search {
     -ms-transform: skew(-20deg, 0deg);
     -o-transform: skew(-20deg, 0deg);
     transform: skew(-20deg, 0deg); }
+div.layout > header .title, div.layout > header .search {
+  -webkit-transition: opacity linear 1s;
+  -moz-transition: opacity linear 1s;
+  transition: opacity linear 1s;
+  opacity: 0; }
+  div.layout > header .title.show, div.layout > header .search.show {
+    opacity: 1; }
+div.layout > aside {
+  -webkit-transition: all cubic-bezier(0, 0, 0.2, 1) 0.5s;
+  -moz-transition: all cubic-bezier(0, 0, 0.2, 1) 0.5s;
+  transition: all cubic-bezier(0, 0, 0.2, 1) 0.5s;
+  left: -20.83333%; }
+  div.layout > aside.show {
+    left: 0; }
+  div.layout > aside .sections li {
+    -webkit-transition: background linear 0.1s;
+    -moz-transition: background linear 0.1s;
+    transition: background linear 0.1s; }
 
 .view-animate.ng-leave {
-  -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s;
-  -moz-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s;
-  transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s; }
-
+  -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s;
+  -moz-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s;
+  transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s; }
+  .view-animate.ng-leave.ng-leave-active {
+    opacity: 0; }
 .view-animate.ng-enter {
-  -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 1s;
-  -moz-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 1s;
-  transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 1s; }
-
-.view-animate.ng-enter {
+  -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 0.7s;
+  -moz-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 0.7s;
+  transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 0.7s;
   opacity: 0; }
+  .view-animate.ng-enter.ng-enter-active {
+    opacity: 1; }
 
-.view-animate.ng-enter.ng-enter-active {
-  opacity: 1; }
-
-.view-animate.ng-leave.ng-leave-active {
+.list-animate.ng-enter {
+  -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 0.7s;
+  -moz-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 0.7s;
+  transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 0.7s;
   opacity: 0; }
+  .list-animate.ng-enter.ng-enter-active {
+    opacity: 1; }
 
 input.ng-invalid {
   -webkit-transition: all linear 0.1s;
   -moz-transition: all linear 0.1s;
   transition: all linear 0.1s; }
+
+/*# sourceMappingURL=main.css.map */
