--- a/app/sass/components/layout.scss
+++ b/app/sass/components/layout.scss
@@ -53,8 +53,35 @@ div.layout {
     color: $layout-side-color;
     .modules {
       @include row();
+      padding: 0.6em;
       li {
         float: left;
+        font-size: 1.8em;
+        padding: 0 0.25em;
+        min-width: 1.6em;
+        text-align: center;
+        border-radius: 0.25em;
+        &:hover {
+          cursor: pointer;
+          background: $layout-side-bg-hover-color;
+          color: $highlight-color;
+        }
+        &.active {
+          background: $layout-active-comp-bg-color;
+          color: $base-accent-color;
+        }
+        i.reporter:before {
+          content: "\f0f6";
+        }
+        i.runner:before {
+          content: "\f04b";
+        }
+        i.organizer:before {
+          content: "\f114";
+        }
+        i.writer:before {
+          content: "\f040";
+        }
       }
     }
     .sections {
@@ -63,14 +90,15 @@ div.layout {
         @include pad($layout-menu-size/4 $layout-menu-size/2);
         font-size: $layout-menu-size;
         border-left: 0.3em solid $layout-side-bg-color;
-        &:hover {
+        &:hover,&.active {
+          color: $highlight-color;
           background-color: $layout-side-bg-hover-color;
+        }
+        &:hover {
           cursor: pointer;
           border-color: $layout-side-color;
         }
         &.active {
-          background-color: $layout-side-bg-hover-color;
-          color: $highlight-color;
           border-color: $base-accent-color;
         }
       }
