--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -335,15 +335,36 @@ div.layout {
     background-color: #333;
     position: fixed;
     min-height: 100%;
-    color: #DDD; }
+    color: #aaaaaa; }
     div.layout > aside .modules {
-      display: block; }
+      display: block;
+      padding: 0.6em; }
       div.layout > aside .modules:after {
         content: "";
         display: table;
         clear: both; }
       div.layout > aside .modules li {
-        float: left; }
+        float: left;
+        font-size: 1.8em;
+        padding: 0 0.25em;
+        min-width: 1.6em;
+        text-align: center;
+        border-radius: 0.25em; }
+        div.layout > aside .modules li:hover {
+          cursor: pointer;
+          background: #666666;
+          color: white; }
+        div.layout > aside .modules li.active {
+          background: black;
+          color: #049CDB; }
+        div.layout > aside .modules li i.reporter:before {
+          content: "\f0f6"; }
+        div.layout > aside .modules li i.runner:before {
+          content: "\f04b"; }
+        div.layout > aside .modules li i.organizer:before {
+          content: "\f114"; }
+        div.layout > aside .modules li i.writer:before {
+          content: "\f040"; }
     div.layout > aside .sections li {
       display: block;
       padding: 0.3em 0.6em;
@@ -353,13 +374,13 @@ div.layout {
         content: "";
         display: table;
         clear: both; }
-      div.layout > aside .sections li:hover {
-        background-color: #666666;
-        cursor: pointer;
-        border-color: #DDD; }
-      div.layout > aside .sections li.active {
-        background-color: #666666;
+      div.layout > aside .sections li:hover, div.layout > aside .sections li.active {
         color: white;
+        background-color: #666666; }
+      div.layout > aside .sections li:hover {
+        cursor: pointer;
+        border-color: #aaaaaa; }
+      div.layout > aside .sections li.active {
         border-color: #049CDB; }
   div.layout > .main {
     width: 79.16667%;
