--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,4 +1,4 @@
 <header ng-controller="HeaderCtrl as header">
     <div class="title" ng-class="{true: 'show'}[app.loaded]">{{ header.title }}</div>
-    <div class="search" ng-class="{true: 'show'}[app.loaded]">Search</div>
+    <div class="search" ng-class="{true: 'show'}[app.loaded]"><i class="fa fa-search"></i></div>
 </header>
